# fastcxt

./: .gitignore  ORGANIZATION.md  README.md  pixi.toml  pyproject.toml
docs/: ag1000g_strategy.md  requirements.txt
experiment/: .gitignore  01_simulate.sh  03_train_pairwise.sh  05_evaluate.sh  06_benchmark_scaling.sh  README.md  benchmark_base_vs_trees.py  benchmark_scaling.py  make_unified_figures.py  plot_experiment_figures.py  plot_scaling.py  regenerate_figures_local.py  run_all.sh  run_experiment.sh  slurm_betty.sh  train_and_benchmark_node_times.py
experiment-10mb-context/: run_betty_sim.sh
experiment-1mb-context/: metrics.csv  plot_metrics.py  run_betty.sh  slurm_figures.sh
experiment-large-context/: generate_figures.py  quick_predict_plot.py  quick_tmrca_plot_v2.py  run_betty.sh  run_experiment.sh  slurm_betty.sh
experiment_burkina_faso/: README.md  atlas_demo.ipynb  atlas_multi_pop.py  build_atlas.py  run_inference.py  run_inference_intra.py
experiment_human_poc/: 02_preprocess.sh  04_train_node_time.sh  05_evaluate.sh  06_benchmark_scaling.sh  benchmark_scaling.py  config.py  plot_all_figures.py  slurm_betty.sh
experiment_mosquito_dating/: README.md  config.py  launch_2L.sh  run.sh  run_population_dating.py
experiment_mosquito_poc/: .gitignore  02_preprocess.sh  03_train_pairwise.sh  05_evaluate.sh  06_benchmark_scaling.sh  config.py  evaluate_pairwise.py  run_all.sh  slurm_betty.sh
experiment_mossies/: run_experiment.sh  run_nohup.sh
experiment_tsinfer_tuning/: .gitignore  README.md  run_experiment.py
fastcxt/: __init__.py  atlas.py  benchmark.py  config.py  dataset.py  hybrid_node_time_model.py  model.py  modules.py  mosquito.py  sfs.py  (+7 more)
(+117 files in other folders)
