[project]
name = "fastcxt"
version = "0.1.0"
description = "Fast pairwise coalescence time inference with Mamba SSMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kevin Korfmann", email = "kevin.korfmann@gmail.com"},
]

dependencies = [
    "numpy",
    "torch>=2.0",
    "mamba-ssm>=2.0",
    "causal-conv1d>=1.2",
    "lightning",
    "einops",
    "tskit",
    "msprime",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
trees = ["tsinfer"]
sim = ["stdpopsim>=0.3.0"]
docs = [
    "sphinx>=7.0",
    "furo",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-design",
    "myst-parser",
]
vis = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "cartopy>=0.21",
]
dev = [
    "pytest",
    "ruff",
]
all = ["fastcxt[trees,sim,vis,docs,dev]"]

[project.scripts]
fastcxt-simulate = "fastcxt.simulate:main"
fastcxt-preprocess = "fastcxt.preprocess:main"
fastcxt-train = "fastcxt.train:main"
fastcxt-benchmark = "fastcxt.benchmark:main"

[project.urls]
Homepage = "https://github.com/kevinkorfmann/fastcxt"
Documentation = "https://fastcxt.readthedocs.io"
Repository = "https://github.com/kevinkorfmann/fastcxt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastcxt"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (require stdpopsim, deselect with '-m \"not slow\"')",
]
